--- a/index.html
+++ b/index.html
@@ -75,14 +75,27 @@
 
   <script>
     const secondHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
     function setDate(){
       //console.log("hiiiii");
       const now = new Date();
+
       const seconds = now.getSeconds()
-      const secondsDegrees = ((seconds/60) * 360);
+      const secondsDegrees = ((seconds/60) * 360) + 90;
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-      console.log(seconds);
+      //console.log(seconds);
+
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins/60) * 360) + 90;
+      minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+    
+      const hour = now.getHours();
+      const hourDegrees = ((hour/12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    // console.log(`${hour}   ${mins}    ${seconds}`);
+    
     }
 
     setInterval(setDate,1000);
