minor formatting chgs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
+  <title>css and vanilla JS clock</title>
 </head>
 <body>
 
@@ -11,10 +11,7 @@
       <div class="clock-face">
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
-        <div class="hand second-hand"
-      
-        ></div>
-            
+        <div class="hand second-hand"></div>
       </div>
     </div>
 
