--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
   <style>
     html {
-      background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+      /* background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50); */
+      background: url(./time.gif);
+      background-repeat: no-repeat;
       background-size: cover;
       font-family: 'helvetica neue';
       text-align: center;
@@ -59,7 +61,7 @@
     .hand {
       width: 50%;
       height: 6px;
-      background: black;
+      background: rgb(243, 2, 2);
       position: absolute;
       top: 50%;
       transform-origin: 100%;
